fixed email form and web validated

--- a/about-us.html
+++ b/about-us.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>About us | Heart and Soul Foundation</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="icon" type="image/x-icon" href="/images/hear&soulLogo.ico">
 
 
 </head>
@@ -22,7 +22,7 @@
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="logolink">
-                <img src="/images/hear&soulLogo.png" class="logo-position">
+                <img src="/images/hear&soulLogo.png" class="logo-position" alt="heart&soulLogo">
             </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class=" active hover-underline-animation">ABOUT US</a>
@@ -45,7 +45,7 @@
 
     <main>
         <div class="about-us-shadow">
-            <img src="/images/painted_hands_heart.jpg">
+            <img src="/images/volunteer.jpg" alt="volunteer">
             <h2><u class="u">ABOU</u>T US</h2>
             <p>The Heart and Soul Foundation is a registered Non-Profit Company established in 2021 to address the needs
                 of disadvantaged, underserved, and underprivileged children, and individuals of all ages from Quellerie
@@ -101,7 +101,7 @@
                     hunger, neglect or other difficulties and provide them with assistance through this initiative.</p>
             </div>
         </div>
-        <!-- --------------------------------------flex_middle------------------------------ -->
+        <!--____________________________flex_middle________________________-->
         <div class="flex-gap">
 
 
@@ -146,7 +146,7 @@
             </div> -->
 
     </main>
-    <!-- -------------------------------------------------footer -->
+    <!--_________________________________footer_____________________________-->
 
     <footer>
         <div class="content">
@@ -154,7 +154,7 @@
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
                 <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
+                <p class="und-footer">opperman.estelle@gmail.com</p>
 
 
             </div>
