--- a/contact-us.html
+++ b/contact-us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Contact us | Heart & Soul Foundation</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="/images/hear&soulLogo.ico">
+
 
 </head>
 
@@ -22,7 +24,7 @@
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="logolink">
-                <img src="/images/hear&soulLogo.png" class="logo-position">
+                <img src="/images/hear&soulLogo.png" class="logo-position" alt="heart&Soul">
             </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
@@ -40,7 +42,7 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/contact.jpg" class="food-donations-img">
+        <img src="/images/contact.jpg" class="food-donations-img" alt="contact">
         <span class="contact-main-heading">CONTACT </span>
         <span class="contact-main-heading-2">US</span>
 
@@ -50,7 +52,7 @@
             class="map"></iframe>
     </div>
     <div class="map-icon">
-        <img src="images/location.png">
+        <img src="images/location.png" alt="location-icon">
     </div>
 
 
@@ -68,15 +70,15 @@
 
         </div>
         <div class="flex-item-left-contact">
-            <img src="/images/contact_images/phone.png" alt="phone">
-            <h5>Ph. : +27 72 456 0669</h5>
+            <img src="/images/contact_images/location_icon.png" alt="phone">
+            <h5>15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</h5>
 
         </div>
     </div>
-    <!-- --------------------------------------flex_middle------------------------------ -->
+    <!--________________________________flex_middle_____________________________-->
 
     <div class="container">
-        <form action="/action_page.php">
+        <form action="https://formspree.io/f/mzbqojon" method="POST">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
@@ -89,14 +91,14 @@
 
 
             <label for="Message">Message</label>
-            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+            <textarea id="Message" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
             <input type="submit" value="Submit">
         </form>
     </div>
 
 
-    <!-- -------------------------------------------------footer -->
+    <!--___________________________________________footer_____________________________________-->
 
     <footer>
         <div class="content">
@@ -104,14 +106,14 @@
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
                 <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
+                <p class="und-footer">opperman.estelle@gmail.com</p>
 
 
             </div>
 
             <div class="right box">
                 <div class="topic">Email us</div>
-                <form action="https://formspree.io/f/mzboolwv" method="POST">
+                <form action="https://formspree.io/f/mzbqojon" method="POST">
                     <label>
                         <input type="email" placeholder="Enter email address" name="email">
                     </label>
