--- a/cycle-poverty.html
+++ b/cycle-poverty.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Breaking the cycle of poverty | Heart & Soul Foundation</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="/images/hear&soulLogo.ico">
 
 </head>
 
@@ -21,7 +22,7 @@
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="logolink">
-                <img src="/images/hear&soulLogo.png" class="logo-position">
+                <img src="/images/hear&soulLogo.png" class="logo-position" alt="heart&soulLogo">
             </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
@@ -40,7 +41,7 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/article_images/empty wallet.jpg" class="food-donations-img">
+        <img src="/images/article_images/wallet.jpg" class="food-donations-img" alt="wallet">
         <span class="cycle-main-heading">CYCLE OF</span>
         <span class="cycle-main-heading-2">POVERTY</span>
         <div class="article-content">
@@ -75,7 +76,7 @@
     </div>
     <div class="article-1-light-shadow">
 
-        <img src="/images/article_images/blankets.jpg" class="article-1-picture">
+        <img src="/images/article_images/blankets.jpg" class="article-1-picture" alt="blankets">
         <h4 class="article-title">Winter Blanket run</h4>
         <p class="article-1-paragraph-1">Winter can be an incredibly difficult time for many children, particularly
             those from less privileged backgrounds.</p>
@@ -90,7 +91,7 @@
     </div>
     <div class="article-2-light-shadow">
 
-        <img src="/images/article_images/golf.jpg" class="article-1-picture">
+        <img src="/images/article_images/golf.jpg" class="article-1-picture" alt="golf">
         <h4 class="article-title">2023 Golf day</h4>
         <p class="article-2-paragraph-1">The 16th of May is an important day for our organization. We are
             hosting a Golf day to raise funds for
@@ -108,7 +109,7 @@
     </div>
     <div class="article-3-light-shadow">
 
-        <img src="/images/donations.jpg" class="article-1-picture">
+        <img src="/images/donations.jpg" class="article-1-picture" alt="donations">
         <h4 class="article-title">The power of donations</h4>
         <p class="article-3-paragraph-1">The act of donating, whether it's money or time, can have an incredibly
             powerful impact on both the recipient and the giver. Donations can help to create positive change in the
@@ -122,7 +123,7 @@
             </i></h5>
     </div>
 
-    <!-- -------------------------------------------------footer -->
+    <!--___________________________________________footer_____________________________________-->
 
     <footer>
         <div class="content">
@@ -130,7 +131,7 @@
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
                 <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
+                <p class="und-footer">opperman.estelle@gmail.com</p>
 
 
             </div>
