--- a/gallery.html
+++ b/gallery.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Gallery | Heart & Soul Foundation</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="/images/hear&soulLogo.ico">
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="logolink">
-                <img src="/images/hear&soulLogo.png" class="logo-position">
+                <img src="/images/hear&soulLogo.png" class="logo-position" alt="heart&soul-founation">
             </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
@@ -35,7 +37,7 @@
 
     </nav>
     <div class="our-gallery-color">
-        <img src="/images/gallery_main.jpg" class="our-gallery-img">
+        <img src="/images/gallery_main.jpg" class="our-gallery-img" alt="gallery">
         <span class="our-gallery-main-heading">Our</span>
         <span class="our-gallery-main-heading-2">Gallery</span>
     </div>
@@ -45,189 +47,189 @@
     <div class="main">
         <div class="gallery">
             <div class="gallery__item">
-                <img src="images/gallery_images/1.jpg" id="myImg1" />
+                <img src="images/gallery_images/1.jpg" id="myImg1" alt="img1">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/2.jpg" id="myImg2" />
+                <img src="images/gallery_images/2.jpg" id="myImg2" alt="img2">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/3.jpg" id="myImg3" />
+                <img src="images/gallery_images/3.jpg" id="myImg3" alt="img3">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/4.jpg" id="myImg4" />
+                <img src="images/gallery_images/4.jpg" id="myImg4" alt="img4">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/5.jpg" id="myImg5" />
+                <img src="images/gallery_images/5.jpg" id="myImg5" alt="img5">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/6.jpg" id="myImg6" />
+                <img src="images/gallery_images/6.jpg" id="myImg6" alt="img6">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/7.jpg" id="myImg7" />
+                <img src="images/gallery_images/7.jpg" id="myImg7" alt="img7">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/8.jpg" id="myImg8" />
+                <img src="images/gallery_images/8.jpg" id="myImg8" alt="img8">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/9.jpg" id="myImg9" />
+                <img src="images/gallery_images/9.jpg" id="myImg9" alt="img9">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/10.jpg" id="myImg10" />
+                <img src="images/gallery_images/10.jpg" id="myImg10" alt="img10">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/11.jpg" id="myImg11" />
+                <img src="images/gallery_images/11.jpg" id="myImg11" alt="img11">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/12.jpg" id="myImg12" />
+                <img src="images/gallery_images/12.jpg" id="myImg12" alt="img12">
             </div>
             <div class="gallery__item">
-                <img src="images/gallery_images/14.jpg" id="myImg14" />
+                <img src="images/gallery_images/14.jpg" id="myImg14" alt="img14">
             </div>
 
         </div>
     </div>
 
-    <!-- The Modal-----------------1--------------------->
+    <!--_____________________________________1___________________-->
     <div id="myModal" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <img src="images/gallery_images/1.jpg" id="myImg1"></img>
+            <img src="images/gallery_images/1.jpg" alt="img1">
 
         </div>
 
     </div>
-    <!-- --------------------------2----------------------- -->
+    <!--_____________________________________2___________________-->
     <div id="myModal2" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close2">&times;</span>
-            <img src="images/gallery_images/2.jpg" id="myImg2"></img>
+            <img src="images/gallery_images/2.jpg" alt="img2">
 
         </div>
     </div>
 
-    <!-- -------------------------3------------------------ -->
+    <!--_____________________________________3___________________-->
     <div id="myModal3" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close3">&times;</span>
-            <img src="images/gallery_images/3.jpg" id="myImg3"></img>
+            <img src="images/gallery_images/3.jpg" alt="img3">
 
         </div>
 
     </div>
 
-    <!-- -------------------------4------------------------ -->
+    <!--_____________________________________4___________________-->
     <div id="myModal4" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close4">&times;</span>
-            <img src="images/gallery_images/4.jpg" id="myImg4"></img>
+            <img src="images/gallery_images/4.jpg" alt="img4">
 
         </div>
 
     </div>
 
-    <!-- -------------------------5------------------------ -->
+    <!--_____________________________________5___________________-->
     <div id="myModal5" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close5">&times;</span>
-            <img src="images/gallery_images/5.jpg" id="myImg5"></img>
+            <img src="images/gallery_images/5.jpg" alt="img5">
 
         </div>
 
     </div>
-    <!-- -------------------------6------------------------ -->
+    <!--_____________________________________6___________________-->
     <div id="myModal6" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close6">&times;</span>
-            <img src="images/gallery_images/6.jpg" id="myImg6"></img>
+            <img src="images/gallery_images/6.jpg" alt="img6">
 
         </div>
 
     </div>
-    <!-- -------------------------7------------------------ -->
+    <!--_____________________________________7___________________-->
     <div id="myModal7" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close7">&times;</span>
-            <img src="images/gallery_images/7.jpg" id="myImg7"></img>
+            <img src="images/gallery_images/7.jpg" alt="img7">
 
         </div>
 
     </div>
-    <!-- -------------------------8------------------------ -->
+    <!--_____________________________________8___________________-->
     <div id="myModal8" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close8">&times;</span>
-            <img src="images/gallery_images/8.jpg" id="myImg8"></img>
+            <img src="images/gallery_images/8.jpg" alt="img8">
 
         </div>
 
     </div>
-    <!-- -------------------------9------------------------ -->
+    <!--_____________________________________9___________________-->
     <div id="myModal9" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close9">&times;</span>
-            <img src="images/gallery_images/9.jpg" id="myImg9"></img>
+            <img src="images/gallery_images/9.jpg" alt="img9">
 
         </div>
 
     </div>
-    <!-- -------------------------10------------------------ -->
+    <!--_____________________________________10___________________-->
     <div id="myModal10" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close10">&times;</span>
-            <img src="images/gallery_images/10.jpg" id="myImg10"></img>
+            <img src="images/gallery_images/10.jpg" alt="img10">
 
         </div>
 
     </div>
-    <!-- -------------------------11------------------------ -->
+    <!--_____________________________________11___________________-->
     <div id="myModal11" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close11">&times;</span>
-            <img src="images/gallery_images/11.jpg" id="myImg11"></img>
+            <img src="images/gallery_images/11.jpg" alt="img11">
 
         </div>
 
     </div>
-    <!-- -------------------------12------------------------ -->
+    <!--_____________________________________12___________________-->
     <div id="myModal12" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close12">&times;</span>
-            <img src="images/gallery_images/12.jpg" id="myImg12"></img>
+            <img src="images/gallery_images/12.jpg" alt="img12">
 
         </div>
 
     </div>
-    <!-- -------------------------14------------------------ -->
+    <!--_____________________________________14___________________-->
     <div id="myModal14" class="modal bg">
 
         <!-- Modal content IMAGE -->
         <div class="modal-content">
             <span class="close14">&times;</span>
-            <img src="images/gallery_images/14.jpg" id="myImg14"></img>
+            <img src="images/gallery_images/14.jpg" alt="img14">
 
         </div>
 
@@ -443,13 +445,14 @@
             }
         }
     </script>
+    <!--_____________________________________footer___________________-->
     <footer>
         <div class="content">
             <div class="left box">
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
                 <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
+                <p class="und-footer">opperman.estelle@gmail.com</p>
 
 
             </div>
