--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Home | Heart & Soul Foundation</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="icon" type="image/x-icon" href="/images/hear&soulLogo.ico">
 </head>
 
 
@@ -20,7 +20,7 @@
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="logolink">
-                <img src="/images/hear&soulLogo.png" class="logo-position">
+                <img src="/images/hear&soulLogo.png" class="logo-position" alt="heart&soulLogo">
             </a>
             <a href="index.html" class="active hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
@@ -37,24 +37,24 @@
 
     </nav>
 
-    <!-- --------------------------------------Slideshow container------------------------------- -->
+    <!--_______________________________Slideshow container_____________-->
     <div class="slideshow-container">
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="/images/charity1.gif" class="slideshow-images">
+            <img src="/images/charity1.gif" class="slideshow-images" alt="charity1">
             <div class="text"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="/images/charity2.gif" class="slideshow-images">
+            <img src="/images/charity2.gif" class="slideshow-images" alt="charity2">
             <div class="text"></div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="/images/charity3.gif" class="slideshow-images">
+            <img src="/images/charity3.gif" class="slideshow-images" alt="charity3">
             <div class="text"></div>
         </div>
 
@@ -73,7 +73,7 @@
     <main>
 
         <div class="mission-statement-shadow">
-            <img src="/images/painted_hands_heart.jpg">
+            <img src="/images/painted_hands_heart.jpg" alt="mission_statement_image">
             <h2><u class="u">Mission Stat</u>ement</h2>
 
             <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
@@ -102,7 +102,7 @@
 
         <div class="article-1-light-shadow">
 
-            <img src="/images/article_images/food_donations.jpg" class="article-1-picture">
+            <img src="/images/article_images/food_donations.jpg" class="article-1-picture" alt="food_donations">
             <h4 class="article-title">Food donations</h4>
             <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
                 helping those in need by providing
@@ -119,7 +119,7 @@
 
         <div class="article-2-light-shadow">
 
-            <img src="/images/article_images/blankets.jpg" class="article-1-picture">
+            <img src="/images/article_images/blankets.jpg" class="article-1-picture" alt="blanket">
             <h4 class="article-title">Winter blanket run</h4>
             <p class="article-2-paragraph-1">Winter can be an incredibly difficult time for many children,
                 particularly those from less privileged
@@ -140,7 +140,7 @@
 
         <div class="article-3-light-shadow">
 
-            <img src="/images/article_images/golf.jpg" class="article-1-picture">
+            <img src="/images/article_images/golf.jpg" class="article-1-picture" alt="Golf Day">
             <h4 class="article-title">2023 Golf day</h4>
             <p class="article-3-paragraph-1">The 16th of May is an important day for our organization. We are
                 hosting a Golf day to raise funds for
@@ -158,7 +158,7 @@
                 <!-- article 4 -->
                 <div class="article-4-light-shadow">
 
-                    <img src="/images/article_images/empty wallet.jpg" class="article-4-picture">
+                    <img src="/images/article_images/wallet.jpg" class="article-4-picture" alt="Empty_wallet">
                     <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
                     <p class="article-4-paragraph-1">Poverty is a complex issue that affects millions of people
                         worldwide. Our charity organization is committed to breaking the cycle of poverty by
@@ -175,7 +175,7 @@
 
                 <div class="article-5-light-shadow">
 
-                    <img src="/images/donations.jpg" class="article-5-picture">
+                    <img src="/images/donations.jpg" class="article-5-picture" alt="Donations">
                     <h4 class="article-title">The power of donations</h4>
                     <p class="article-5-paragraph-1">The act of donating, whether it's money or time, can have an
                         incredibly powerful impact on both the recipient and the giver. Donations can help to create
@@ -194,7 +194,7 @@
 
                 <div class="article-6-light-shadow">
 
-                    <img src="/images/article_images/community.jpg" class="article-6-picture">
+                    <img src="/images/article_images/community.jpg" class="article-6-picture" alt="Community">
                     <h4 class="article-title">Making a difference in the community</h4>
                     <p class="article-5-paragraph-1">At our charity organization, we are passionate about creating
                         positive change in our local community. Through our programs and services, we strive to make
@@ -208,8 +208,9 @@
                         </i></h5>
                 </div>
             </div>
+        </div>
     </main>
-    <!-- -------------------------------------------------footer -->
+    <!--___________________________________________footer_____________________________________-->
     <div class="footer-gap">
         &nbsp;
     </div>
@@ -219,14 +220,14 @@
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
                 <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
+                <p class="und-footer">opperman.estelle@gmail.com </p>
 
 
             </div>
 
             <div class="right box">
                 <div class="topic">Email us</div>
-                <form action="https://formspree.io/f/mzboolwv" method="POST">
+                <form action="https://formspree.io/f/mzbqojon" method="POST">
                     <label>
                         <input type="email" placeholder="Enter email address" name="email">
                     </label>
