--- a/donations.html
+++ b/donations.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Power of donations | Heart & Soul Foundation </title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="/images/hear&soulLogo.ico">
 
 </head>
 
@@ -21,7 +21,7 @@
 
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="logolink">
-                <img src="/images/hear&soulLogo.png" class="logo-position">
+                <img src="/images/hear&soulLogo.png" class="logo-position" alt="heart&soulLogo">
             </a>
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
@@ -40,7 +40,7 @@
 
 
     <div class="food-donations-color">
-        <img src="/images/donations.jpg" class="donations-img">
+        <img src="/images/donations.jpg" class="donations-img" alt="donations">
         <span class="donations-main-heading">POWER OF</span>
         <span class="donations-main-heading-2">DONATIONS</span>
         <div class="article-content">
@@ -76,7 +76,7 @@
 
         <div class="article-1-light-shadow">
 
-            <img src="/images/article_images/community.jpg" class="article-1-picture">
+            <img src="/images/article_images/community.jpg" class="article-1-picture" alt="community">
             <h4 class="article-title">Making a difference in the community</h4>
             <p class="article-1-paragraph-1">At our charity organization, we are passionate about creating positive
                 change in our local community. Through our programs and services, we strive to make a ...</p>
@@ -88,7 +88,7 @@
         </div>
         <div class="article-2-light-shadow">
 
-            <img src="/images/article_images/empty wallet.jpg" class="article-1-picture">
+            <img src="/images/article_images/wallet.jpg" class="article-1-picture" alt="wallet">
             <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
             <p class="article-2-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
                 charity organization is committed to breaking the cycle of poverty by empowering communities and
@@ -104,7 +104,7 @@
         </div>
         <div class="article-3-light-shadow">
 
-            <img src="/images/article_images/blankets.jpg" class="article-1-picture">
+            <img src="/images/article_images/blankets.jpg" class="article-1-picture" alt="blankets">
             <h4 class="article-title">Winter Blanket run</h4>
             <p class="article-3-paragraph-1">Winter can be an incredibly difficult time for many children, particularly
                 those from less privileged backgrounds.</p>
@@ -117,47 +117,47 @@
                     <a href="blanket-run.html" class="link">Read More </a>
                 </i></h5>
         </div>
+    </div>
+    <!--___________________________________________footer_____________________________________-->
 
-        <!-- -------------------------------------------------footer -->
-
-        <footer>
-            <div class="content">
-                <div class="left box">
-                    <div class="topic"><span class="und-footer">Contact U</span>S</div>
-                    <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
-                    <p class="und-footer">Ph. : +27 72 456 0669</p>
-                    <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
-
-
-                </div>
-
-                <div class="right box">
-                    <div class="topic">Email us</div>
-                    <form action="https://formspree.io/f/mzboolwv" method="POST">
-                        <label>
-                            <input type="email" placeholder="Enter email address" name="email">
-                        </label>
-                        &nbsp;
-                        <p style="font-size: x-large">Message</p>
-
-                        <label>
-
-                            <textarea name="message" placeholder=" Write a description..."></textarea>
-                        </label>
-                        <input type="submit" name="submit" value="Send">
-                        <div class="media-icons">
-                            <a href="https://www.facebook.com/heartandsoulcommunitycentre" target="_blank"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/heart_and_soul_foundation_/" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
-
-                        </div>
-                    </form>
-                </div>
+    <footer>
+        <div class="content">
+            <div class="left box">
+                <div class="topic"><span class="und-footer">Contact U</span>S</div>
+                <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
+                <p class="und-footer">Ph. : +27 72 456 0669</p>
+                <p class="und-footer">opperman.estelle@gmail.com</p>
 
 
             </div>
 
-        </footer>
-        <script src="app.js"></script>
+            <div class="right box">
+                <div class="topic">Email us</div>
+                <form action="https://formspree.io/f/mzboolwv" method="POST">
+                    <label>
+                        <input type="email" placeholder="Enter email address" name="email">
+                    </label>
+                    &nbsp;
+                    <p style="font-size: x-large">Message</p>
+
+                    <label>
+
+                        <textarea name="message" placeholder=" Write a description..."></textarea>
+                    </label>
+                    <input type="submit" name="submit" value="Send">
+                    <div class="media-icons">
+                        <a href="https://www.facebook.com/heartandsoulcommunitycentre" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/heart_and_soul_foundation_/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+
+                    </div>
+                </form>
+            </div>
+
+
+        </div>
+
+    </footer>
+    <script src="app.js"></script>
 </body>
